# governance-scan

./: .gitignore  LICENSE  PUBLISHING.md  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/governance_scan/: __init__.py  cli.py  scanner.py  scoring.py
tests/: test_cli.py  test_scanner.py
